Fix water hydration overlap problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,7 @@ body {
 .water-bar-daily {
     display: flex;
     position: absolute;
-    bottom: 13%;
+    bottom: 33%;
 }
 
 .milk-container {
@@ -233,16 +233,17 @@ body {
 }
 
 .milk-container img {
-    height: 100%;
+    height: 80%;
     width: 60%;
     position: absolute;
-    bottom: 20%;
+    bottom: 40%;
 }
 
 .water-info {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 30px;
 }
 /*~~~~~~~~~ SLEEP ~~~~~~~~~*/
 
